welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: expected class or object definition
def positionFinale(): Boolean ={
^ColumnByColumn:16: error: expected class or object definition
def serpente(){
^ColumnByColumn:32: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:35: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:38: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:41: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:44: error: Unmatched closing brace '}' ignored here
}
^